force-app/main/default/objects/Brands_Channel__c/fields/Channel_Status__c.field-meta.xml
<CustomField>
    <fullName>Channel_Status__c</fullName>
    <label>Channel Status</label>
    <type>Picklist</type>
    <description>The Status of the Channel record. Only those with the &quot;Live&quot; Status will be shown as options to Users on the Community Site</description>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>