force-app/main/default/objects/Brands_Channel__c/fields/Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>Channel_Type__c</fullName>
    <description>The Status of the Channel record. Only those with the &quot;Live&quot; Status will be shown as options to Users on the Community Site</description>
    <label>Channel Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Party</fullName>
            </value>
            <value>
                <fullName>Webstore</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>