force-app/main/default/objects/Brands_Channel__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australia - AU</fullName>
            </value>
            <value>
                <fullName>Austria - AT</fullName>
            </value>
            <value>
                <fullName>Belgium - BE</fullName>
            </value>
            <value>
                <fullName>Brazil - BR</fullName>
            </value>
            <value>
                <fullName>Brunei Darussalam - BN</fullName>
            </value>
            <value>
                <fullName>Bulgaria - BG</fullName>
            </value>
            <value>
                <fullName>Canada - CA</fullName>
            </value>
            <value>
                <fullName>Chile - CL</fullName>
            </value>
            <value>
                <fullName>China - CN</fullName>
            </value>
            <value>
                <fullName>Colombia - CO</fullName>
            </value>
            <value>
                <fullName>Croatia - HR</fullName>
            </value>
            <value>
                <fullName>Czech Republic - CZ</fullName>
            </value>
            <value>
                <fullName>Denmark - DK</fullName>
            </value>
            <value>
                <fullName>Egypt - EG</fullName>
            </value>
            <value>
                <fullName>Estonia - EE</fullName>
            </value>
            <value>
                <fullName>Finland - FI</fullName>
            </value>
            <value>
                <fullName>France - FR</fullName>
            </value>
            <value>
                <fullName>Germany - DE</fullName>
            </value>
            <value>
                <fullName>Greece - GR</fullName>
            </value>
            <value>
                <fullName>Hong Kong, SAR China - HK</fullName>
            </value>
            <value>
                <fullName>Hungary - HU</fullName>
            </value>
            <value>
                <fullName>India - IN</fullName>
            </value>
            <value>
                <fullName>Indonesia - ID</fullName>
            </value>
            <value>
                <fullName>Ireland - IE</fullName>
            </value>
            <value>
                <fullName>Israel - IL</fullName>
            </value>
            <value>
                <fullName>Italy - IT</fullName>
            </value>
            <value>
                <fullName>Japan - JP</fullName>
            </value>
            <value>
                <fullName>Korea (South) - KR</fullName>
            </value>
            <value>
                <fullName>Latvia - LV</fullName>
            </value>
            <value>
                <fullName>Lithuania - LT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>