force-app/main/default/objects/Brands_Channel__c/fields/Parent_Channel__c.field-meta.xml
<CustomField>
    <fullName>Parent_Channel__c</fullName>
    <label>Parent Channel</label>
    <type>Lookup</type>
    <referenceTo>Brands_Channel__c</referenceTo>
    <relationshipLabel>Child Channels</relationshipLabel>
    <relationshipName>Child_Channels</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>